static_gaussian/scan_chen2021_dynamics_quickcheck2/logs/tau_1p10.log
COMMAND:
/home/wangxukang/miniconda3/envs/spike_gpu/bin/python /home/wangxukang/mice_visual_lab/spikenet_btorch_demo/chen_gong_2021_static_double_peak.py --device cuda --seed 42 --T-ms 200.0 --stim-start-ms 80.0 --ext-scale 1.0 --noise-cv 0.0 --inh-scale 1.0 --tau-scale 1.1 --output-dir /home/wangxukang/mice_visual_lab/spikenet_btorch_demo/static_gaussian/scan_chen2021_dynamics_quickcheck2/tau_1p10

STDOUT:

STDERR:
  File "/home/wangxukang/mice_visual_lab/spikenet_btorch_demo/chen_gong_2021_static_double_peak.py", line 102
    >>>>>>> 1cb92294be061c82f0c4395da47712a51d4bbb2f
            ^
SyntaxError: invalid decimal literal
